WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66459
[CSSRegions]Content displayed in regions should not be scrollable
https://bugs.webkit.org/show_bug.cgi?id=66459
Summary
[CSSRegions]Content displayed in regions should not be scrollable
Mihnea Ovidenie
Reported
2011-08-18 05:41:51 PDT
Created
attachment 104328
[details]
LayoutTest Assume you have a flow thread that is displayed in one or more regions. If the content is larger than the size of all regions, some content will not be displayed. You should not be able to scroll the content in regions so that the remaining content is displayed. I will attach a test for the bug. I will upload the patch too once 66142 lands in mainline.
Attachments
LayoutTest
(1.53 KB, text/html)
2011-08-18 05:41 PDT
,
Mihnea Ovidenie
no flags
Details
Patch
(4.67 KB, patch)
2011-08-19 02:10 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2011-08-19 02:10:17 PDT
Created
attachment 104479
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-19 12:19:56 PDT
Comment on
attachment 104479
[details]
Patch Clearing flags on attachment: 104479 Committed
r93428
: <
http://trac.webkit.org/changeset/93428
>
WebKit Review Bot
Comment 3
2011-08-19 12:20:00 PDT
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 4
2011-08-19 14:09:06 PDT
This caused fast/repaint/japanese-rl-selection-repaint-in-regions.html to start failing. The new version seems correct so I will rebaseline on mac + chromium when the bots cycle.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug