[CSSRegions]Content displayed in regions should not be scrollable https://bugs.webkit.org/show_bug.cgi?id=66459

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-08-19
Reviewed by Darin Adler.

Source/WebCore:

Initially, when creating the style for the RenderFlowThread, overflowX and overflowY were both set to hidden,
so that RenderView did not display scrollbars when a RenderFlowThread exists. However, this allowed the possibility
of scrolling the content displayed in region.

Now, the RenderFlowThread objects are ignored in RenderBlock::insertPositionedObject and the style of the RenderFlowThread
can be set to visible, thus preventing scrolling of the content displayed in regions.

Test: fast/regions/content-flowed-into-regions-no-scroll.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::createFlowThreadStyle):

LayoutTests:

* fast/regions/content-flowed-into-regions-no-scroll-expected.txt: Added.
* fast/regions/content-flowed-into-regions-no-scroll.html: Added.

Canonical link: https://commits.webkit.org/82418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93428 268f45cc-cd09-0410-ab3c-d52691b4dbfc